--- a/DMSService/DMSService/bin/DMSService.dll.config
+++ b/DMSService/DMSService/bin/DMSService.dll.config
@@ -85,13 +85,13 @@
     <add key="servicePath" value="XRMServices/2011/Organization.svc" />
     <add key="userName" value="crm21" />
     <add key="password" value="bsd@123" />-->
-       <add key="protocol" value="http" />
+       <add key="protocol" value="https" />
     <add key="server" value="crmtrainning.ttcsugar.com.vn" />
     <add key="port" value="80" />
     <add key="org" value="BHSAX" />
     <add key="servicePath" value="XRMServices/2011/Organization.svc" />
-    <add key="userName" value="nhatle" />
-    <add key="password" value="Pass@word2" />
+    <add key="userName" value="s.tech" />
+    <add key="password" value="TTC@190" />
   </appSettings>
   <system.webServer>
     <directoryBrowse enabled="true"/>
